# react-native-rs

./: .gitignore  .npmignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  jest.config.js  jest.setup.js  package.json  react-native-rs.podspec  tsconfig.json
.github/workflow/: ci.yml
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp
android/src/main/java/com/reactnativers/: ReactNativeRsModule.java  ReactNativeRsPackage.java  ReactNativeRsSpec.java
cpp/: react-native-rs.cpp  react-native-rs.h
example/: README.md  package.json
example/src/: App.tsx
ios/: ReactNativeRs.h  ReactNativeRs.mm
rust/: Cargo.toml  build.sh  install-prerequisites.sh
rust/.cargo/: config.toml
rust/src/: cmd.rs  lib.rs  panic_handler.rs  tracing_collector.rs
rust/src/commands/: fibonacci.rs  hash.rs  image_processing.rs  mod.rs  prime.rs  sort.rs
src/: NativeReactNativeRs.ts  index.ts
src/types/: index.ts
